Fix empty standalone note not editable on iPhone

--- a/src/scss/components/rich-editor/_rich-editor.scss
+++ b/src/scss/components/rich-editor/_rich-editor.scss
@@ -20,7 +20,7 @@
 	.editor-container,
 	.tox-tinymce,
 	.tox-edit-area {
-		flex: 1 1 0;
+		flex: 1 1 auto;
 		display: flex;
 		flex-direction: column;
 	}
